changes for lecture 02

--- a/Ada - Técnicas I - Aula 02.ipynb
+++ b/Ada - Técnicas I - Aula 02.ipynb
@@ -260,6 +260,59 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Você recebeu informações de todos os clientes de uma academia. Com o objetivo de verificar a saúde e obter novas informações sobre essas pessoas, você foi encarregado de criar um sistema que extraia algumas informações para a orientação de novas atividades da academia. Para isso, crie um sistema que extraia as seguintes informações:\n",
+    "\n",
+    "- O cálculo do Índice de Massa Corpórea (IMC) de cada pessoa.\n",
+    "- A quantidade e proporção de clientes em cada grupo, de acordo com o IMC.\n",
+    "- A quantidade de pessoas acima de 90 kg **e** abaixo de 1.70 m."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista_imc = [[1.788810693, 65.64810194, 0],\n",
+    "[1.566784434, 76.64276798, 0],\n",
+    "[2.092193055, 55.46818533, 1],\n",
+    "[1.782470917, 67.28199736, 1],\n",
+    "[1.735766977, 69.28900763, 0],\n",
+    "[1.686974648, 56.84005114, 0],\n",
+    "[1.797104633, 65.20897328, 1],\n",
+    "[1.187349055, 48.16476395, 0],\n",
+    "[1.595891436, 45.41064814, 1],\n",
+    "[1.396281776, 67.93011334, 0],\n",
+    "[1.606148165, 67.71960410, 0],\n",
+    "[1.707589967, 45.60933262, 0],\n",
+    "[1.735513116, 64.84545151, 0],\n",
+    "[1.672055182, 39.70595150, 1],\n",
+    "[1.723377069, 50.05888021, 1],\n",
+    "[1.684574272, 56.54508738, 1],\n",
+    "[1.733258930, 37.51218759, 0],\n",
+    "[1.757899659, 57.36242239, 0],\n",
+    "[1.913337705, 69.30724639, 1],\n",
+    "[1.456048343, 69.34233711, 0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Hoje em dia, o MIC é visto como um método \"ultrapassado\", surgindo novas alternativas como o Índice de Adiposidade Corporal (IAC), que usa a medida da cintura para o cálculo. Crie uma nova função que calcule o IAC e extraia as estatísticas semelhantes ao que foi anunciado para o IMC. Em seguida, crie uma nova função (que utiliza as duas já criadas anteriormente) para verificar se existe uma certa correspondência entre os dois métodos."
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -287,57 +340,6 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "2. Você recebeu informações de todos os clientes de uma academia. Com o objetivo de verificar a saúde e obter novas informações sobre essas pessoas, você foi encarregado de criar um sistema que extraia algumas informações para a orientação de novas atividades da academia. Para isso, crie um sistema que extraia as seguintes informações:\n",
-    "\n",
-    "- O cálculo do Índice de Massa Corpórea (IMC) de cada pessoa.\n",
-    "- A quantidade e proporção de clientes em cada grupo, de acordo com o IMC.\n",
-    "- A quantidade de pessoas acima de 90 kg **e** abaixo de 1.70 m."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def imc_eval(alturas, pesos):\n",
-    "    imc = pesos/alturas**2\n",
-    "\n",
-    "    imc_subnormal = np.argwhere(imc < 18.5).flatten()\n",
-    "    imc_normal = np.argwhere((imc >= 18.5) & (imc < 25)).flatten()\n",
-    "    imc_sobrepeso = np.argwhere((imc >= 25) & (imc < 30)).flatten()\n",
-    "    imc_obeso = np.argwhere(imc >= 30).flatten()\n",
-    "\n",
-    "    total = imc.shape[0]\n",
-    "    props = np.array([arr.shape[0]/total for arr in [imc_subnormal, imc_normal, imc_sobrepeso, imc_obeso]])\n",
-    "\n",
-    "    qtd_pessoas = np.sum((alturas < 1.70) & (pesos > 90))\n",
-    "\n",
-    "    return imc, (imc_subnormal, imc_normal, imc_sobrepeso, imc_obeso), props, qtd_pessoas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "alturas = np.array([1.75, 1.63, 1.50, 1.77])\n",
-    "pesos = np.array([50, 60, 100, 120])\n",
-    "imc_eval(alturas, pesos)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "3. Hoje em dia, o MIC é visto como um método \"ultrapassado\", surgindo novas alternativas como o Índice de Adiposidade Corporal (IAC), que usa a medida da cintura para o cálculo. Crie uma nova função que calcule o IAC e extraia as estatísticas semelhantes ao que foi anunciado para o IMC. Em seguida, crie uma nova função (que utiliza as duas já criadas anteriormente) para verificar se existe uma certa correspondência entre os dois métodos."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -349,7 +351,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. A área de processamento de imagens demanda um grande conhecimento sobre matrizes e cálculos matriciais. Por exemplo, podemos pensar em uma imagem como uma grande matriz de pixels, onde cada valor desta matriz representa a intensidade de cor. \n",
+    "2. A área de processamento de imagens demanda um grande conhecimento sobre matrizes e cálculos matriciais. Por exemplo, podemos pensar em uma imagem como uma grande matriz de pixels, onde cada valor desta matriz representa a intensidade de cor. \n",
     "Geralmente as imagens estão presentes no espaço de cores **RGB**, e as informações armazenadas são, na verdade, contidas em um tensor com três dimensões (H x W x C). \n",
     "\n",
     "Em processamento de imagens, podemos fazer uso desse conhecimento para transformação de imagens (ou edição). Para isso, faça o que se pede a seguir:\n",
