update Git lecture

--- a/Ada - Técnicas I - Aula 03b.ipynb
+++ b/Ada - Técnicas I - Aula 03b.ipynb
@@ -33,39 +33,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Criando o repositório "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Para criar o repositório, faremos o simples comando\n",
-    "\n",
-    "`git init` \n",
-    "\n",
-    "E se quisermos copiar de um repositório já existente, faremos o comando\n",
-    "\n",
-    "`git clone <url do repositório>`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Se você **não** clonou um repositório existente e quiser conectar seu repositório a um remoto, você deve 'adicioná-lo' usando\n",
-    "\n",
-    "`git remote add origin <server>`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Organização do Git "
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -75,7 +47,10 @@
     "\n",
     "- Index: Área 'temporária' contendo os arquivos a serem adicionados (Stage) \n",
     "\n",
-    "- HEAD: Área que aponta para o último `commit` realizado."
+    "- HEAD: Área que aponta para o último `commit` realizado.\n",
+    "\n",
+    "![](https://i.imgur.com/mWRKjlm.png)\n",
+    "\n"
    ]
   },
   {
@@ -106,10 +81,119 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Criando o repositório "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mostraremos algumas formas para criação do repositório, que dependerá da situação do teu projeto."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inicializando um Repositório em um Diretório Vazio\n",
+    "\n",
+    "Para entender como faremos isso, vamos usar alguns comandos e entender o que está acontecendo. Antes, crie um diretório com alguns arquivos que você gostaria. \n",
+    "\n",
+    "- `git init <repo>` # para criar um repositório git vazio\n",
+    "\n",
+    "- `cd <repo_dir>`\n",
+    "\n",
+    "- `git branch -M main`\n",
+    "\n",
+    "- `git status`\n",
+    "\n",
+    "- `git add .`\n",
+    "\n",
+    "- `git status` \n",
+    "\n",
+    "- `git commit -m \"message\"` \n",
+    "\n",
+    "- `git status`\n",
+    "\n",
+    "(Agora vamos no Github para criar um novo repositório)\n",
+    "- `git remote add origin <URL do repositório>`\n",
+    "\n",
+    "- `git remote -v`\n",
+    "\n",
+    "- `git pull origin main --allow-unrelated-histories` \n",
+    "\n",
+    "- `git push origin main`"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Usando um repositório já criado\n",
+    "\n",
+    "Criar repositório lá no GitHub se ele não existe\n",
+    "\n",
+    "Na linha de comando, utilize o comando `cd` para navegar até a pasta que contém seus arquivos, ou vá até a pasta que deseja-> botão direto do mouse-> Gir bash here.\n",
+    "\n",
+    "Quanto estiver na pasta que deseja, digite:\n",
+    "\n",
+    " - `git init`: \n",
+    "\n",
+    "- `git status` \n",
+    "\n",
+    "- `git add .` \n",
+    "\n",
+    "- `git status` \n",
+    "\n",
+    "- `git commit -m \"<commit message>\"` \n",
+    "\n",
+    "- `git status` \n",
+    "\n",
+    "- `git remote add origin <URL Github>`\n",
+    "\n",
+    "- `git remote -v` \n",
+    "\n",
+    "- `git branch -a` \n",
+    "\n",
+    "- `git pull origin main --allow-unrelated-histories` \n",
+    "\n",
+    "- `git push origin main` \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para criar o repositório, faremos o simples comando\n",
+    "\n",
+    "`git init` \n",
+    "\n",
+    "E se quisermos copiar de um repositório já existente, faremos o comando\n",
+    "\n",
+    "`git clone <url do repositório>`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se você **não** clonou um repositório existente e quiser conectar seu repositório a um remoto, você deve 'adicioná-lo' usando\n",
+    "\n",
+    "`git remote add origin <server>`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Ramificando o repositório"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -123,7 +207,9 @@
     "\n",
     "E para **excluir**, usamos \n",
     "\n",
-    "`git checkout -d <nome do branch>`\n"
+    "`git checkout -d <nome do branch>`\n",
+    "\n",
+    "<img src= https://www.nobledesktop.com/image/gitresources/git-branches-merge.png/>\n"
    ]
   },
   {
