--- a/Ada - Técnicas I - Aula 03a.ipynb
+++ b/Ada - Técnicas I - Aula 03a.ipynb
@@ -613,10 +613,246 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import requests \n",
+    "import pandas as pd \n",
+    "from typing import Dict\n",
+    "\n",
+    "def get_json(url) -> Dict:\n",
+    "    '''\n",
+    "    Função para fazer a requisição de uma API. \n",
+    "    A função requer a URL para fazer a requisição da API.\n",
+    "    Retorna um dicionário (ou uma lista de dicionários, dependendo da resposta da API).\n",
+    "    ''' \n",
+    "    res = requests.get(url)\n",
+    "    res_json = res.json()\n",
+    "    return res_json "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def append_request(url:str = 'https://www.boredapi.com/api/activity', df = None):\n",
+    "    res = get_json(url)\n",
+    "    # Perceba a sutileza que estamos usando nesse caso abaixo :)\n",
+    "    df_res = pd.DataFrame([res]) \n",
+    "\n",
+    "    if df is None:\n",
+    "        new_df = df_res\n",
+    "    else:\n",
+    "        new_df = pd.concat([df,df_res])\n",
+    "    return new_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_n_activities(n:int=10):\n",
+    "    if n <= 0 or type(n) != int:\n",
+    "        print('Por favor, insira um número inteiro e positivo')\n",
+    "    \n",
+    "    df = append_request()\n",
+    "    for i in range(n-1):\n",
+    "        df = append_request(df=df)\n",
+    "    df.reset_index(inplace=True, drop=True)\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>activity</th>\n",
+       "      <th>type</th>\n",
+       "      <th>participants</th>\n",
+       "      <th>price</th>\n",
+       "      <th>link</th>\n",
+       "      <th>key</th>\n",
+       "      <th>accessibility</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Do a jigsaw puzzle</td>\n",
+       "      <td>recreational</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Jigsaw_puzzle</td>\n",
+       "      <td>8550768</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Write a poem</td>\n",
+       "      <td>recreational</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td></td>\n",
+       "      <td>8688620</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Learn how to make an Alexa skill</td>\n",
+       "      <td>education</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>https://developer.amazon.com/en-US/docs/alexa/...</td>\n",
+       "      <td>1592381</td>\n",
+       "      <td>0.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Find a DIY to do</td>\n",
+       "      <td>diy</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td></td>\n",
+       "      <td>4981819</td>\n",
+       "      <td>0.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Take a caffeine nap</td>\n",
+       "      <td>relaxation</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td></td>\n",
+       "      <td>5092652</td>\n",
+       "      <td>0.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Start a garden</td>\n",
+       "      <td>recreational</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td></td>\n",
+       "      <td>1934228</td>\n",
+       "      <td>0.35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Do yoga</td>\n",
+       "      <td>recreational</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td></td>\n",
+       "      <td>4688012</td>\n",
+       "      <td>0.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Start a webinar on a topic of your choice</td>\n",
+       "      <td>education</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td></td>\n",
+       "      <td>6826029</td>\n",
+       "      <td>0.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Research a topic you're interested in</td>\n",
+       "      <td>education</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td></td>\n",
+       "      <td>3561421</td>\n",
+       "      <td>0.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Contribute code or a monetary donation to an o...</td>\n",
+       "      <td>charity</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>https://github.com/explore</td>\n",
+       "      <td>7687030</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            activity          type  \\\n",
+       "0                                 Do a jigsaw puzzle  recreational   \n",
+       "1                                       Write a poem  recreational   \n",
+       "2                   Learn how to make an Alexa skill     education   \n",
+       "3                                   Find a DIY to do           diy   \n",
+       "4                                Take a caffeine nap    relaxation   \n",
+       "5                                     Start a garden  recreational   \n",
+       "6                                            Do yoga  recreational   \n",
+       "7          Start a webinar on a topic of your choice     education   \n",
+       "8              Research a topic you're interested in     education   \n",
+       "9  Contribute code or a monetary donation to an o...       charity   \n",
+       "\n",
+       "   participants  price                                               link  \\\n",
+       "0             1    0.1        https://en.wikipedia.org/wiki/Jigsaw_puzzle   \n",
+       "1             1    0.0                                                      \n",
+       "2             1    0.0  https://developer.amazon.com/en-US/docs/alexa/...   \n",
+       "3             1    0.4                                                      \n",
+       "4             1    0.1                                                      \n",
+       "5             1    0.3                                                      \n",
+       "6             1    0.0                                                      \n",
+       "7             1    0.0                                                      \n",
+       "8             1    0.0                                                      \n",
+       "9             1    0.1                         https://github.com/explore   \n",
+       "\n",
+       "       key  accessibility  \n",
+       "0  8550768           1.00  \n",
+       "1  8688620           0.00  \n",
+       "2  1592381           0.10  \n",
+       "3  4981819           0.30  \n",
+       "4  5092652           0.08  \n",
+       "5  1934228           0.35  \n",
+       "6  4688012           0.90  \n",
+       "7  6826029           0.90  \n",
+       "8  3561421           0.90  \n",
+       "9  7687030           0.00  "
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_n_activities(n=10)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -652,12 +888,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "9650cb4e16cdd4a8e8e2d128bf38d875813998db22a3c986335f89e0cb4d7bb2"
+    "hash": "d044c6e0ce06759120adefce77398d00e1228e64d92f3f185fbd024a7701b8e0"
    }
   }
  },
